--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-"<h1>Hello GitHub</h1>" 
+<!DOCTYPE html>
+<html lang="id">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kopdit Adiguna - Koperasi Simpan Pinjam Terpercaya</title>
+    <meta name="description" content="Kopdit Adiguna adalah koperasi simpan pinjam terpercaya yang memberikan solusi keuangan terbaik untuk anggota dengan layanan profesional dan bunga kompetitif.">
+    <meta name="keywords" content="koperasi, simpan pinjam, kopdit, adiguna, kredit, tabungan, investasi">
+    <meta property="og:title" content="Kopdit Adiguna - Koperasi Simpan Pinjam Terpercaya">
+    <meta property="og:description" content="Solusi keuangan terpercaya dengan layanan simpan pinjam profesional dan bunga kompetitif">
+    <meta name="twitter:title" content="Kopdit Adiguna - Koperasi Simpan Pinjam Terpercaya">
+    <meta name="twitter:description" content="Solusi keuangan terpercaya dengan layanan simpan pinjam profesional dan bunga kompetitif">
+    
+    <script src="https://resource.trickle.so/vendor_lib/unpkg/react@18/umd/react.production.min.js"></script>
+    <script src="https://resource.trickle.so/vendor_lib/unpkg/react-dom@18/umd/react-dom.production.min.js"></script>
+    <script src="https://resource.trickle.so/vendor_lib/unpkg/@babel/standalone/babel.min.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
+</head>
+<body>
+    <div id="root"></div>
+    <script type="text/babel" src="components/Header.js"></script>
+    <script type="text/babel" src="components/Hero.js"></script>
+    <script type="text/babel" src="components/Services.js"></script>
+    <script type="text/babel" src="components/About.js"></script>
+    <script type="text/babel" src="components/Contact.js"></script>
+    <script type="text/babel" src="components/Footer.js"></script>
+    <script type="text/babel" src="app.js"></script>
+</body>
+</html>
